[gd_scene load_steps=2 format=2]

[ext_resource path="res://LobbyUI.gd" type="Script" id=1]

[node name="LobbyUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.89581
margin_right = -6.89581
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 9.0
margin_right = 517.0
margin_bottom = 341.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
margin_left = 16.2471
margin_top = 15.8147
margin_right = 344.247
margin_bottom = 34.8147
bbcode_text = "Waiting Room"
tab_size = 5
text = "Waiting Room"

[node name="RoomID" type="RichTextLabel" parent="Panel"]
margin_left = 19.4149
margin_top = 89.4521
margin_right = 137.415
margin_bottom = 108.452
bbcode_text = "Waiting Room"
tab_size = 5
text = "Waiting Room"

[node name="RCBox" type="ColorRect" parent="Panel"]
margin_left = 16.0
margin_top = 34.0
margin_right = 331.0
margin_bottom = 74.0
color = Color( 0.196078, 0.176471, 0.337255, 1 )

[node name="RCText" type="Label" parent="Panel/RCBox"]
margin_left = 3.58582
margin_top = 2.51422
margin_right = 240.586
margin_bottom = 35.5142
text = "Connected to Room ID"
valign = 1

[node name="StartButton" type="Button" parent="Panel"]
margin_left = 411.274
margin_top = 40.5513
margin_right = 481.274
margin_bottom = 60.5513
text = "Start"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 26.0
margin_top = 119.0
margin_right = 494.0
margin_bottom = 289.0

[node name="List" type="VScrollBar" parent="ScrollContainer"]
margin_right = 12.0
margin_bottom = 12.0
[connection signal="pressed" from="Panel/StartButton" to="." method="_on_StartButton_pressed"]
